# sitp

./: AGENTS.md  Cargo.toml  README  README.md
compilers/: .gitmodules  README.md
picocuda/: .gitignore  Cargo.toml  README  README.md  pyproject.toml  rustfmt.toml
picocuda/src/: dfdx.rs  differentiator.rs  functional.rs  lib.rs  libpy.rs  main.rs  nn.rs  optimizer.rs  parser.rs  tensor.rs  tpy.rs  trs.rs
picocuda/src/ast/: allocator.rs  encoder.rs  exporter.rs  mod.rs  parser.rs  selector.rs
picocuda/src/bindings/: mod.rs  tpy.rs
picocuda/src/cfg/: allocator.rs  encoder.rs  exporter.rs  mod.rs  parser.rs  selector.rs
picocuda/src/cgen/: allocator.rs  enc.rs  isel.rs  mod.rs  ra.rs  selector.rs
picocuda/src/compiler/: mod.rs
picocuda/src/ops/: cpu.rs  cpu_ops.rs  cuda_ops.cu  cuda_ops.rs  dfdx.rs  mod.rs  spec.rs  wgsl_ops.rs
picocuda/src/opto/: mod.rs  opto_parser.rs  parser.rs  selector.rs
picocuda/src/opto/cfg/: dflow.rs  mod.rs  opto_parser.rs
picocuda/src/opto/son/: mod.rs  optimizer.rs  parser.rs  utils.rs
picocuda/src/sema/: mod.rs  parser.rs  selector.rs  typer.rs
picocuda/src/snapshots/: picoc__optimizer__peephole__add.snap  picoc__optimizer__peephole__add_compound.snap  picoc__optimizer__peephole__div.snap  picoc__optimizer__peephole__mul.snap  picoc__optimizer__peephole__sub.snap  picoc__parser__parse_arith__add_compound.snap  picoc__parser__parse_arith__lit.snap  picoc__parser__scope_bindings__asnmt.snap  picoc__parser__scope_bindings__asnmt_expr.snap
picocuda/src/son/: dumper.rs  mod.rs  optimizer.rs  parser.rs
picocuda/src/son/snapshots/: picoc__optimizer__peephole__mul.snap  picoc__parser__lex_arith__lit.snap  picoc__parser__lexer__add_compound.snap  picoc__parser__lexer__branch.snap  picoc__son__optimizer__peephole__add_compound.snap  picoc__son__optimizer__peephole__sub.snap  picoc__son__parser__lexer__mul.snap  picoc__son__parser__scope_bindings__asnmt_expr.snap.new  picoc__son__parser__test_lexer__div.snap  picoc__son__parser__test_lexer__lit.snap  picoc__son__parser__test_parser__add_compound.snap.new
picocuda/tests/: ffn.ipynb  ffn.py  test.py  test_ops.py
picocuda/tests/bindings/: asnmt_lexical_scope.c
picocuda/tests/c0/arith/: sub.c
picocuda/tests/c0/control/: if_arg.c
(+104 files in other folders)
