[package]
name = "picograd"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "picograd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
cudarc = "0.16.4"
numpy = "0.23.0"
opencl3 = "0.12.0"
pyo3 = { version = "0.23.3", features = ["multiple-pymethods"] }
rand = "0.9.0"
thiserror = "2.0.11"
