cargo-features = ["edition2024"]

[package]
name = "picoc"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
bril = { git = "https://github.com/sampsyo/bril", package = "bril-rs" }
elements = { path = "../e"}

[dev-dependencies]
insta = "1.43.1"

# NB: bril's rust tooling uses git as their package registry (no crates.io).
#     there are 2 rust implementations of bril2json (u8->json) upstream
#       1. https://github.com/sampsyo/bril/tree/main/bril2json-rs
#       2. https://github.com/sampsyo/bril/tree/main/bril-rs

#     if in the future access needs to be modified from binary crate to library crate,
#       (i.e accessing/modifying bril's semantic analysis: lexer/parser/typer/etc),
#       cargo git dependencies cannot be used because they both namespace under `bril2json`.
#     either
#       - fork and rename one of the crates to continue using git dependencies,
#       - or vendor with git (sparse) submodules using path dependencies.

#      unfortunately, as of Cargo 1.88 (2025-06-26),
#      "git and path cannot be used at the same time"
#      see: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-dependencies-from-git-repositories